Add gobject-introspection annotations for GstPadIntLinkFunction

Fixes build with latest gobject-introspection from git.

https://bugzilla.gnome.org/show_bug.cgi?id=622025